objects/Lead.object
<CustomObject>
    <fields>
        <fullName>MED_Marketing_Activity__c</fullName>
        <description>Specified the action under a given marketing vehicle.</description>
        <inlineHelpText>Specified the action under a given marketing vehicle.</inlineHelpText>
        <label>MED Marketing Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MED_Marketing_Vehicle__c</fullName>
        <description>Specifies the primary medium used to communicate offerings to the contact.</description>
        <inlineHelpText>Specifies the primary medium used to communicate offerings to the contact.</inlineHelpText>
        <label>MED Marketing Vehicle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MQLRecord_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the MQL record that was created from this event lead</description>
        <label>MQLRecord ID</label>
        <referenceTo>TEMarketing__MQLRecord__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MQL_age__c</fullName>
        <formula>NOW() -  TEMarketing__MQL_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Start_Date__c</fullName>
        <inlineHelpText>Date when orders begin shipping to the customer for general acceptance</inlineHelpText>
        <label>Manufacturing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Type__c</fullName>
        <description>Asia Lead</description>
        <label>Market Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industry Shipbuilding</fullName>
                </value>
                <value>
                    <fullName>Power Generation Wind</fullName>
                </value>
                <value>
                    <fullName>Power Generation Nuclear</fullName>
                </value>
                <value>
                    <fullName>Power Generation Solar</fullName>
                </value>
                <value>
                    <fullName>Power Generation Others</fullName>
                </value>
                <value>
                    <fullName>Power Transmission Overhead</fullName>
                </value>
                <value>
                    <fullName>Power Transmission Underground</fullName>
                </value>
                <value>
                    <fullName>Power Transmission Sub-station</fullName>
                </value>
                <value>
                    <fullName>Power Distribution LV Overhead</fullName>
                </value>
                <value>
                    <fullName>Power Distribution LV Underground</fullName>
                </value>
                <value>
                    <fullName>Power Distribution MV Overhead</fullName>
                </value>
                <value>
                    <fullName>Power Distribution MV Underground</fullName>
                </value>
                <value>
                    <fullName>Power Distribution Industrial</fullName>
                </value>
                <value>
                    <fullName>Industry Railway</fullName>
                </value>
                <value>
                    <fullName>Industry Mining</fullName>
                </value>
                <value>
                    <fullName>Industry OGPC</fullName>
                </value>
                <value>
                    <fullName>Industry Building/Construction</fullName>
                </value>
                <value>
                    <fullName>Industry Others</fullName>
                </value>
                <value>
                    <fullName>Crompton Metering</fullName>
                </value>
                <value>
                    <fullName>Distribution &amp; Automation</fullName>
                </value>
                <value>
                    <fullName>Industry Steel</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_source__c</fullName>
        <description>from central</description>
        <inlineHelpText>Marketing source informations</inlineHelpText>
        <label>Marketing source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MobileVizArt__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>FirstName + &apos; &apos; + LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Product_Introduction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From Central</description>
        <label>New Product Introduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_existing_leads__c</fullName>
        <description>field to display number of existing leads with same email address</description>
        <label>Number of existing leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onwer_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>we use this field to update the lead again to assign the owner from default lead assignment rules</description>
        <label>Onwer Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Value_Taken__c</fullName>
        <description>Used by Portal Users to define amount of Order Value Taken in $</description>
        <inlineHelpText>Value must be USA $ .</inlineHelpText>
        <label>Order Value Taken $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner_Assigned_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is set after the owner assignment workflow is complete. This flag is used in ClsRouteLeadUtil to avoid sending duplicate email the 2nd time an update trigger runs.</description>
        <label>Owner Assigned Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Assigned__c</fullName>
        <defaultValue>0</defaultValue>
        <description>we use this field to update the lead again to assign the owner from default lead assignment rules</description>
        <label>Owner Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_BU__c</fullName>
        <formula>TEXT(Owner:User.GIBU__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Sub_BU__c</fullName>
        <formula>Text(Owner:User.Sub_Vertical__c)</formula>
        <label>Owner Sub BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIC_Agent_Email__c</fullName>
        <description>Email Address of the PIC Agent who initially created the Opportunity from RightNow. The value is entered when the data is copied over as a Hot Hand Raiser Lead. This information comes from the Central org.</description>
        <label>PIC Agent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PIC_Agent_Name__c</fullName>
        <description>from central</description>
        <inlineHelpText>name of PIC agent created the lead</inlineHelpText>
        <label>PIC Agent Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Detail_Page__c</fullName>
        <description>From Central</description>
        <inlineHelpText>number of requests to the part detail page</inlineHelpText>
        <label>Part Detail Page</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passed_To_Distributor_Date__c</fullName>
        <description>The date that the lead MQL was passed to a distributor</description>
        <inlineHelpText>The date that the lead MQL was passed to a distributor</inlineHelpText>
        <label>Passed To Distributor Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Passed_to_Distributor_Recently__c</fullName>
        <description>Has the lead been passed to the distributor in the last day?</description>
        <formula>NOT(ISNULL(Passed_To_Distributor_Date__c)) &amp;&amp; Passed_To_Distributor_Date__c &gt;= (NOW() - 1)</formula>
        <inlineHelpText>Has the lead been passed to the distributor in the last day?</inlineHelpText>
        <label>Passed to Distributor Recently</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Playbooks_Next_Step_Due_Date__c</fullName>
        <description>Shows the date when the next set of Playbooks tasks are due.</description>
        <label>Playbooks Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Name__c</fullName>
        <label>Playbooks Play Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Status__c</fullName>
        <label>Playbooks Play Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Flight</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Unenrolled</fullName>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Number__c</fullName>
        <label>Playbooks Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Distributor__c</fullName>
        <label>Preferred Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A.E. Petsche Co.</fullName>
                </value>
                <value>
                    <fullName>Adrel</fullName>
                </value>
                <value>
                    <fullName>Ahrim</fullName>
                </value>
                <value>
                    <fullName>AIS</fullName>
                </value>
                <value>
                    <fullName>Allied Electronics</fullName>
                </value>
                <value>
                    <fullName>Alma Electronic d.O.O</fullName>
                </value>
                <value>
                    <fullName>Arrow</fullName>
                </value>
                <value>
                    <fullName>AVNET</fullName>
                </value>
                <value>
                    <fullName>Bando</fullName>
                </value>
                <value>
                    <fullName>Bejoken</fullName>
                </value>
                <value>
                    <fullName>Biakom Ltd.</fullName>
                </value>
                <value>
                    <fullName>Boersig</fullName>
                </value>
                <value>
                    <fullName>Cablecraft</fullName>
                </value>
                <value>
                    <fullName>Carlton-Bates</fullName>
                </value>
                <value>
                    <fullName>Chief Enterprises Inc.</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Arfine</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Chenpu</fullName>
                </value>
                <value>
                    <fullName>CN Focus - ESK</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Giant Link</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Jurmay</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Match</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Ocean</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Panshi</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Power Yacht</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Prosper</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Shengtai</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Tongyida</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Uni-Creator</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Voasun</fullName>
                </value>
                <value>
                    <fullName>CN Focus - Weilang</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Lead_ID__c</fullName>
        <description>Asia Lead</description>
        <label>Project Lead ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Location__c</fullName>
        <label>Project Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Period__c</fullName>
        <label>Project Period</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Volume__c</fullName>
        <label>Project Volume</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Queue_Reason__c</fullName>
        <description>this contains the reason the Queue</description>
        <label>Queue Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the contact requires a quote</inlineHelpText>
        <label>Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROLE__c</fullName>
        <description>central org</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engineer/Developer</fullName>
                </value>
                <value>
                    <fullName>Purchaser</fullName>
                </value>
                <value>
                    <fullName>Product Manager</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>Component Engineer</fullName>
                </value>
                <value>
                    <fullName>Design Engineer</fullName>
                </value>
                <value>
                    <fullName>Distributor - Purchasing</fullName>
                </value>
                <value>
                    <fullName>Distributor - Sales</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Inventory Control</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Manufacturing Engineer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reached_Threshold__c</fullName>
        <description>From Central</description>
        <inlineHelpText>Date when the lead reached the MQL threshold</inlineHelpText>
        <label>Reached Threshhold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Read_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Asia Lead</description>
        <label>Read Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Design__c</fullName>
        <inlineHelpText>Region where design takes place</inlineHelpText>
        <label>Region Design</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rest of Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>China / HK / Taiwan</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>South Asia (Pacific)</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Reflects the geographical region of the customer, based on their country.</description>
        <inlineHelpText>Reflects the geographical region of the customer, based on their country. Current values: North America, EMEA (excl. India), India, South America, Australia / New Zealand, AP South, AP North.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>AP South</fullName>
                </value>
                <value>
                    <fullName>AP North</fullName>
                </value>
                <value>
                    <fullName>EMEA (excl. India)</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Australia / New Zealand</fullName>
                </value>
                <value>
                    <fullName>China (AP Central)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_of_Consumption_Sales__c</fullName>
        <inlineHelpText>Region where order will be received</inlineHelpText>
        <label>Region of Consumption/Sales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rest of Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>China / HK / Taiwan</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_of_Manufacturing__c</fullName>
        <inlineHelpText>Region where parts will be shipped to/end product manufactured</inlineHelpText>
        <label>Region of Manufacturing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rest of Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>China / HK / Taiwan</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Sales_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requested Sales Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reset_Lead_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag set by Eloqua when Lead values need to be reset due to a MQL event.  Starts a process that will update the necessary values.</description>
        <inlineHelpText>A flag set by Eloqua when Lead values need to be reset due to a MQL event.  Starts a process that will update the necessary values.</inlineHelpText>
        <label>Reset Lead Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIC__c</fullName>
        <label>SIC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_REASON_CODE__c</fullName>
        <label>STATUS REASON CODE</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Availability of competitive offerings</fullName>
                </value>
                <value>
                    <fullName>Bad contact data</fullName>
                </value>
                <value>
                    <fullName>Company mating compatibility</fullName>
                </value>
                <value>
                    <fullName>Customer relationship</fullName>
                </value>
                <value>
                    <fullName>Delivery performance</fullName>
                </value>
                <value>
                    <fullName>Early involvement</fullName>
                </value>
                <value>
                    <fullName>Global infrastructure</fullName>
                </value>
                <value>
                    <fullName>Launch time reliability</fullName>
                </value>
                <value>
                    <fullName>No immediate opportunity</fullName>
                </value>
                <value>
                    <fullName>Non or unrelated business / competitor</fullName>
                </value>
                <value>
                    <fullName>Non-responsive lead</fullName>
                </value>
                <value>
                    <fullName>No opportunity - Not enough resources</fullName>
                </value>
                <value>
                    <fullName>Overall quality advantage</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product portfolio</fullName>
                </value>
                <value>
                    <fullName>Rejected due to age / backlog clean-up</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Superior design</fullName>
                </value>
                <value>
                    <fullName>This is not really a Lead.</fullName>
                </value>
                <value>
                    <fullName>This Lead does not belong to my business unit.</fullName>
                </value>
                <value>
                    <fullName>This Lead is already in my pipeline.</fullName>
                </value>
                <value>
                    <fullName>Tier One relationship/OEM Position</fullName>
                </value>
                <value>
                    <fullName>Tooling Cost</fullName>
                </value>
                <value>
                    <fullName>Volume bundling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_REASON__c</fullName>
        <description>from central org</description>
        <label>STATUS REASON</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SUGGESTED_SE__c</fullName>
        <label>SUGGESTED SE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Group__c</fullName>
        <label>Sales Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Big Industry</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Shipbuilding</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
                <value>
                    <fullName>Wholesaler</fullName>
                </value>
                <value>
                    <fullName>Wind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_PN_s__c</fullName>
        <inlineHelpText>Please list the sample PN(s)</inlineHelpText>
        <label>Sample PN(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Samples__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are samples requested ?</inlineHelpText>
        <label>Samples</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scoring_Range__c</fullName>
        <description>from Central</description>
        <inlineHelpText>Scoring range of the lead</inlineHelpText>
        <label>Scoring Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmentation_2__c</fullName>
        <description>Rail-specific picklist for the Inno Trans</description>
        <inlineHelpText>Please enter the applicable platform</inlineHelpText>
        <label>Segmentation 2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rolling Stock</fullName>
                </value>
                <value>
                    <fullName>Signalling and Control</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Set_up_Meeting__c</fullName>
        <inlineHelpText>Please specify the meeting type if required</inlineHelpText>
        <label>Set up Meeting</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scope Meeting</fullName>
                </value>
                <value>
                    <fullName>Technical Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_BU__c</fullName>
        <label>Source BU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Price_Requests__c</fullName>
        <description>from central org</description>
        <inlineHelpText>number of special price requests</inlineHelpText>
        <label>Special Price Requests</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specify_2__c</fullName>
        <defaultValue>&quot;Which issues do you encounter during installation that we could help through improved connectivity ?&quot;</defaultValue>
        <inlineHelpText>Which issues do you encounter during installation that we could help through improved connectivity ?</inlineHelpText>
        <label>Detail Customer Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specify_Application_Interest_Other__c</fullName>
        <label>Specify Application Interest  &apos;Other&apos;</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specify_Customer_Segment_Other__c</fullName>
        <label>Specify Customer Segment &apos;Other&apos;</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specify_Other_Follow_Up_Action__c</fullName>
        <label>Specify &apos;Other&apos; Follow-Up Activity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specify__c</fullName>
        <defaultValue>&quot;What are the major failure modes related to connectivity today?&quot;</defaultValue>
        <inlineHelpText>What are the major failure modes related to connectivity today?</inlineHelpText>
        <label>Detail Customer Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>Please enter a subject for this lead.</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>